--- a/_includes/article-info.html
+++ b/_includes/article-info.html
@@ -16,7 +16,7 @@
     target=site.data.variables.default.page.show_tags
     source0=layout.show_tags source1=include.article.show_tags -%}
   {%- assign _show_tags = __return -%}
-  {%- if _show_tags and include.article.tags[0] -%}
+  {%- if _show_tags and include.article.tags[0] and !include.article.tags contains 'secret' -%}
     {%- assign _show_tags = true -%}
   {%- else -%}
     {%- assign _show_tags = false -%}
