--- a/_includes/article-info.html
+++ b/_includes/article-info.html
@@ -51,7 +51,7 @@
             </li>
           {%- endfor -%}
         </ul>
-      {%- 두얄 -%}
+      {%- endif -%}
       {%- if _show_author or _show_date or _pageview -%}
         <ul class="right-col menu">
           {%- if _show_author  -%}
