--- a/_includes/article-list.html
+++ b/_includes/article-list.html
@@ -5,7 +5,7 @@
 {%- include snippets/get-locale-string.html key='READMORE' -%}
 {%- assign _locale_readmore = __return -%}
 
-{%- assign _sorted_list = include.articles | where: "tags", "include.article.tags[0] != 'secret'" -%}
+{%- assign _sorted_list = include.articles | where: "tags", "include.articles.tags[0] != 'secret'" -%}
 {%- if include.group_by == 'year' -%}
   {%- assign _sorted_list = _sorted_list | sort: 'date' -%}
 {%- endif -%}
